--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,9 @@
 ---
 applications:
 - name: "emil1"
+
+# we love YAML
+
   memory: 1024M
   instances: 1
   buildpack: https://github.com/cloudfoundry/java-buildpack.git
